# omni-node

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  release.yml
src/: client.rs  lib.rs  main.rs  server.rs
