[package]
name = "omni-node"
authors = ["Denis Deniz <denis2.glez@gmail.com>"]
license = "MIT"
repository = "https://github.com/denis2glez/omni-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
