[package]
name = "omni-node"
authors = ["Denis Deniz <denis2.glez@gmail.com>"]
license = "MIT"
repository = "https://github.com/denis2glez/omni-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
tokio-serde = { version = "0.9", features = ["messagepack"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = [
    "v4",
    "fast-rng",
    "serde",
    "macro-diagnostics",
] }
